refactor: refactoring repositories, controllers and use cases due addition of tsyringe
