# src/modules/head/useCases/moveHead/MoveHeadController.ts
@@ -1,16 +1,17 @@
 import { Request, Response } from 'express';
+import { container } from 'tsyringe';
 
 import { MoveHeadUseCase } from './MoveHeadUseCase';
 
 class MoveHeadController {
-  constructor(private moveHeadService: MoveHeadUseCase) {}
-
   handle(request: Request, response: Response): Response {
     const { action, movement } = request.body;
 
-    this.moveHeadService.execute({ action, movement });
+    const moveHeadService = container.resolve(MoveHeadUseCase);
 
-    return response.status(201).send();
+    moveHeadService.execute({ action, movement });
+
+    return response.status(204).send();
   }
 }
 
